tests/ui/borrowck/issue-114374-invalid-help-fmt-args.stderr
error[E0716]: temporary value dropped while borrowed
  --> $DIR/issue-114374-invalid-help-fmt-args.rs:5:13
   |
LL |     let x = format_args!("a {} {} {}.", 1, format_args!("b{}!", 2), 3);
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^- temporary value is freed at the end of this statement
   |             |
   |             creates a temporary value which is freed while still in use
...
LL |     bar(x);
   |         - borrow later used here
   |
   = note: the result of `format_args!` can only be assigned directly if no placeholders in its arguments are used
   = note: to learn more, visit <https://doc.rust-lang.org/std/macro.format_args.html>

error[E0716]: temporary value dropped while borrowed
  --> $DIR/issue-114374-invalid-help-fmt-args.rs:10:15
   |
LL |     let foo = format_args!("{}", "hi");
   |               ^^^^^^^^^^^^^^^^^^^^^^^^- temporary value is freed at the end of this statement
   |               |
   |               creates a temporary value which is freed while still in use
LL |
LL |     bar(foo);
   |         --- borrow later used here
   |
   = note: the result of `format_args!` can only be assigned directly if no placeholders in its arguments are used
   = note: to learn more, visit <https://doc.rust-lang.org/std/macro.format_args.html>

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0716`.
